[metadata]
name = clockpy
version = 0.1
author = Altieres Schincariol Netto
author_email = altnetto@gmail.com
description = A library that enables you an easy way to verify your code time consumption
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/altnetto/clockpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src